code/force-app/main/default/objects/Survey_Result_Items__c/Survey_Result_Items__c.object-meta.xml
<CustomObject>
    <label>檢核結果產品</label>
    <nameField>
        <label>結果產品</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>