code/force-app/main/default/objects/Survey_Result_Items__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>經營計劃</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>檢核結果產品</relationshipLabel>
    <relationshipName>Annual_Plan_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>