code/force-app/main/default/objects/Survey_Result_Items__c/fields/Estimated_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date__c</fullName>
    <label>預估時程</label>
    <type>Date</type>
</CustomField>