code/force-app/main/default/objects/Survey_Result_Items__c/fields/Is_Already_Owned__c.field-meta.xml
<CustomField>
    <fullName>Is_Already_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已持有產品</label>
    <type>Checkbox</type>
</CustomField>