code/force-app/main/default/objects/Survey_Result_Items__c/fields/Is_Applied_This_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Applied_This_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>本次申請產品</label>
    <type>Checkbox</type>
</CustomField>