code/force-app/main/default/objects/Survey_Result_Items__c/fields/Is_Auto_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>由flow自動打勾</description>
    <label>自動建議</label>
    <type>Checkbox</type>
</CustomField>