code/force-app/main/default/objects/Survey_Result_Items__c/fields/Is_Follow_Up_Suggested__c.field-meta.xml
<CustomField>
    <fullName>Is_Follow_Up_Suggested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>科主管建議追蹤</label>
    <type>Checkbox</type>
</CustomField>