code/force-app/main/default/objects/Survey_Result_Items__c/fields/Is_Suggested_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Suggested_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>建議產品</label>
    <type>Checkbox</type>
</CustomField>