code/force-app/main/default/objects/Survey_Result_Items__c/fields/Reason_For_Not_Applying__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Not_Applying__c</fullName>
    <label>建議產品未新申請原因</label>
    <type>TextArea</type>
</CustomField>