code/force-app/main/default/objects/Survey_Result_Items__c/validationRules/Cannot_Choose_Earlier_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Choose_Earlier_Date</fullName>
    <active>true</active>
    <description>不讓使用者選已過的日期</description>
    <errorConditionFormula>Estimated_Date__c &lt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Estimated_Date__c</errorDisplayField>
    <errorMessage>請選擇未來的日期</errorMessage>
</ValidationRule>