code/force-app/main/default/objects/Survey_Result_Items__c/validationRules/Cannot_Uncheck_Auto_Recommended_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Uncheck_Auto_Recommended_Products</fullName>
    <active>true</active>
    <description>不讓使用者把自動建議產品打勾取消</description>
    <errorConditionFormula>Is_Auto_Recommended__c &amp;&amp; PRIORVALUE(Is_Suggested_Product__c) != Is_Suggested_Product__c &amp;&amp; !Is_Suggested_Product__c</errorConditionFormula>
    <errorDisplayField>Is_Suggested_Product__c</errorDisplayField>
    <errorMessage>無法打勾取消自動建議的產品</errorMessage>
</ValidationRule>